<resources>
    <string name="app_name">ACM签到</string>

    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">欢迎</string>
    <string name="invalid_username">不是有效的用户名</string>
    <string name="invalid_password">密码必须大于5位</string>
    <string name="login_failed">登录失败</string>
    <string name="title_activity_main">MainActivity2</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">训练记录</string>
    <string name="title_notifications">用户信息</string>
    <string name="sign_up"><u>注册</u></string>
    <string name="sign_up_noLine">注册</string>
    <string name="dialog_ProgressDialog_Message">加载中</string>

    <string name="sign_up_title">欢迎注册</string>
    <string name="signUp_username">用户名</string>
    <string name="signUp_password">密码</string>
    <string name="signUp_passwordConfirm">确认密码</string>
    <string name="signUp_name">真实姓名</string>
    <string name="signUp_department">学院</string>
    <string name="signUp_admin">管理员</string>
    <string name="signUp_adminVerify">管理员邀请码</string>
    <string name="signUp_email">电子邮箱</string>
    <string name="signUp_emailVerify">验证码</string>
    <string name="signUp_resend">发送验证码</string>
    <string name="signUp_resendTimeout">重发(%d)</string>
    <string name="signUp_error">注册失败，发生了奇怪的错误，请稍后重试</string>
    <string name="signUp_adminVerifyError">管理员验证码错误，请重试</string>
    <string name="signUp_success">注册成功</string>
    <string name="signUp_emailVerifyCodeError">获取验证码失败，请重试</string>
    <string name="signUp_emailNotLegal">数据不合法，请检查后重试</string>

    <string name="home_scanButton">扫码签到</string>
    <string name="home_invalidQRCode">无效的二维码</string>
    <string name="signIn_error">签到失败</string>
    <string name="signIn_error_network">网络异常</string>
    <string name="signIn_error_illegal">不合法的数据</string>
    <string name="signIn_error_fail">其他错误</string>
    <string name="signIn_success_1">签到成功</string>
    <string name="signIn_success_2">签退成功</string>

    <string name="trainingRecord_id">训练记录:</string>
    <string name="trainingRecord_status_0">未完成</string>
    <string name="trainingRecord_status_1">无效</string>
    <string name="trainingRecord_status_2">未记录</string>
    <string name="trainingRecord_status_3">已完成</string>
    <string name="trainingRecord_length">训练时长</string>
    <string name="trainingRecord_start">开始于 </string>
    <string name="trainingRecord_end">结束于 </string>

    <string name="userInformation_email">邮箱: </string>
    <string name="userInformation_department">部门: </string>
    <string name="userInformation_major">专业: </string>
    <string name="userInformation_joinTime">加入时间: </string>
    <string name="userInformation_allTrainingTime">总训练时间:  </string>

    <string name="settings">设置</string>
    <string name="settings_account">账号</string>
    <string name="settings_jumpToWeb">跳转到网站</string>
    <string name="settings_refreshHistory">刷新训练记录</string>
    <string name="settings_refreshHistory_summary">从服务器获取当前用户的所有登录记录覆盖到本地</string>
    <string name="settings_logout">登出</string>
    <string name="settings_other">其它</string>
    <string name="settings_info">关于</string>
    <string name="settings_server">服务器</string>
    <string name="settings_server_summary">指定登录、签到的服务器的地址。请在指导下修改。</string>
    <string name="settings_server_illegal">网址不合法，请检查</string>
    <string name="settings_server_changeSuccess">更改成功，请重新登录</string>
    <string name="settings_server_changeFail">更改失败，请检查网址</string>

    <string name="info_sub">不科学的Js宅 开发</string>
    <string name="info_box1">本应用仅用于西北工业大学ACM团队日常训练打卡签到，不得用于其他用途。</string>
</resources>