<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_account">

        <Preference
            app:key="web"
            app:title="@string/settings_jumpToWeb" />

        <Preference
            app:icon="@drawable/outline_refresh_24"
            app:key="refresh"
            app:summary="@string/settings_refreshHistory_summary"
            app:title="@string/settings_refreshHistory" />

        <Preference
            app:icon="@drawable/baseline_logout_24"
            app:key="logout"
            app:title="@string/settings_logout" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_other">

        <EditTextPreference
            android:defaultValue="https://www.orangej.xyz"
            app:key="server"
            app:summary="@string/settings_server_summary"
            app:title="@string/settings_server" />

        <Preference
            app:icon="@drawable/outline_info_24"
            app:key="info"
            app:title="@string/settings_info">

            <intent
                android:targetClass="xyz.orangej.acmsigninsystemandroid.ui.settings.InfoActivity"
                android:targetPackage="xyz.orangej.acmsigninsystemandroid" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>